src/objects/E2CP__Canned_Comment__c.object
<CustomObject>
    <fields>
        <fullName>E2CP__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines whether this canned comment is available to be selected.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2CP__Category__c</fullName>
        <inlineHelpText>You can group canned comments into categories to make it easier to find the entries you need. To manage categories, go to Setup &gt; Create &gt; Objects &gt; Canned Comment. Click the field name &quot;Category&quot; and then modify the picklist values as necessary.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E2CP__Comment_HTML__c</fullName>
        <label>Comment HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>E2CP__Comment__c</fullName>
        <inlineHelpText>Maximum of 4000 characters due to SFDC comment field size limitations.  Be sure to leave room for the recipients to be added at the top of the comment if you have that feature enabled.</inlineHelpText>
        <label>Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Last_Used_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The last User to insert this Canned Comment into a comment on the New Comment page.</inlineHelpText>
        <label>Last Used By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Canned_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E2CP__Last_Used_Date__c</fullName>
        <inlineHelpText>The last time this Canned Comment was inserted into a comment on the New Comment page.</inlineHelpText>
        <label>Last Used Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>E2CP__Title__c</fullName>
        <inlineHelpText>Use a descriptive title to help users identify the correct canned comment they want to use.</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__Usage_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total number of times this Canned Comment has been inserted into a comment on the New Comment page.</inlineHelpText>
        <label>Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Canned Comment</label>
    <listViews>
        <fullName>E2CP__Active</fullName>
        <columns>NAME</columns>
        <columns>E2CP__Category__c</columns>
        <columns>E2CP__Title__c</columns>
        <columns>E2CP__Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E2CP__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>E2CP__Inactive</fullName>
        <columns>NAME</columns>
        <columns>E2CP__Category__c</columns>
        <columns>E2CP__Title__c</columns>
        <columns>E2CP__Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E2CP__Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Canned Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canned Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>